@@ -4,6 +4,7 @@
 
 == rufus-tokyo - 1.0.5    released 2010/01/06
 
+- todo  : now using getconf to determine INT_MIN (thanks oklahoma_mixer)
 - bug   : issue with ree and lib.free(pointer), switching to tcfree
 
 
